# icfpc2025

./: .gitignore  CLAUDE.md  Cargo.toml  PROBLEM.md  README.md  docker-compose.yml  test_concurrent_select.py
api-server/: API.md  Cargo.toml
api-server/resources/efficiency/: efficiency11_parsed.txt  efficiency12_parsed.txt  efficiency13_parsed.txt  efficiency1_parsed.txt  efficiency2_parsed.txt  efficiency3_parsed.txt  efficiency4_parsed.txt  efficiency5_parsed.txt  efficiency6_parsed.txt  efficiency7_parsed.txt  efficiency8_parsed.txt  efficiency9_parsed.txt
api-server/src/: database.rs  handlers.rs  icfpc_client.rs  lib.rs  main.rs  models.rs
deploy/: .env.production  README.md  deploy-services.sh  deploy.sh  icfpc2025-api.service  nginx.conf  setup-vm.sh  transfer-files.sh
garasubo-solver/: Cargo.toml  README.md  idea.md
garasubo-solver/src/: api.rs  build_partial_map.rs  candidate_gen.rs  chatgpt_solver.rs  cover_walk.rs  de_bruijn.rs  finalize_map.rs  guess_map.rs  lib.rs  main.rs  multi_run_pipeline.rs  pass2_id_double.rs  pass2_ingest.rs  pass2_scheduler.rs  pass3_unknown_explore.rs  phase_c.rs  rp_verify_batch.rs  session_manager.rs  signature_index.rs  solver.rs  union_find.rs
leaderboard/: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  test.py  view.py
leaderboard/results/: 0906_0138.json  0906_0150.json  0906_0200.json  0906_0210.json  0906_0220.json  0906_0230.json  0906_0240.json  0906_0251.json  0906_0301.json  0906_0311.json  0906_0322.json  0906_0332.json  0906_0342.json  0906_0403.json  0906_0413.json  0906_0423.json  0906_0434.json  0906_0444.json  0906_0454.json  0906_0505.json  0906_0515.json  0906_0525.json  0906_0536.json  0906_0546.json  0906_0557.json  0906_0607.json  0906_0617.json  0906_0628.json  0906_0638.json  0906_0649.json  0906_0659.json  0906_0709.json  0906_0720.json  0906_0730.json  0906_0741.json  0906_0751.json  0906_0802.json  0906_0812.json  0906_0822.json  0906_0833.json  (+59 more)
rule/: addendum.md  task_1.0.md  task_1.2.html  task_1.2.md
script.py/: API.md  README.md  api.py  full_solver.py  graph.py  plan.py  pyproject.toml  random_walk_solver.py  server.py
scripts/: explore.sh  guess.sh  select.sh
smt-guessor/: AGENTS.md  DOUBLE_MAZE.md  README.md  cegar.py  cegis.py  cegis_sat.py  cpsat.py  double_maze.py  euler_path.py  gen_plan.py  kissat.py  kissat_score3.py  main.py  pyproject.toml  test_kissat.sh  trace.py  visualize.py
smt-guessor/example/: aleph-flowlight.json  hhet.json  map-hhet.json  map-primus.json  map-probatio.json  map-quartus.json  map-secundus.json  map-tertius.json  map-zain.json  map.json  primus.json  quartus.json  quintus.json  sample.json  secundus.json  tertius-multi.json  tertius.json  zain.json
smt-guessor/tests/: test_cegis_sat.py
solver/: Cargo.toml  README.md  test_equivalence.py  test_equivalence_detailed.rs
solver-autotaker/: ALGORITHM.md  Cargo.toml  README.md
solver-flowlight/: AGENTS.md  Cargo.toml
solver/src/: api.rs  api_trait.rs  complete_three.rs  correct_three.rs  graph.rs  main.rs  mock_api.rs  probatio_fixed.rs  probatio_solver.rs  random_test.rs  simple_graph.rs  solver.rs  test.rs  test_discovery.rs  three_room.rs
sql/: init.sql
sum-cli/: Cargo.toml
webapp/: example-map.json  index.html  package-lock.json  package.json  vite.config.ts
(+72 files in other folders)
