[package]
name = "garasubo-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "signal"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
dotenvy = "0.15"
thiserror = "2.0.16"
