[project]
name = "leaderboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "schedule>=1.2.0",
    "matplotlib>=3.7.0",
    "ruff>=0.12.12",
    "isort>=6.0.1",
    "black>=25.1.0",
    "streamlit[charts]>=1.49.1",
]
