[project]
name = "smt-guessor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.9.4",
    "ortools>=9.14.6206",
    "passagemath-environment>=10.6",
    "passagemath-kissat>=10.5.48",
    "z3-solver>=4.15.3.0",
]
